--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,10 @@ dependencies {
 
 	// Social Login
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.2.0'
+
+	// AWS S3
+	implementation("software.amazon.awssdk:bom:2.21.0")
+	implementation("software.amazon.awssdk:s3:2.21.0")
 }
 
 tasks.named('test') {
